# RustMC

./: .gitignore  Cargo.toml  New World  README.md
assets/models/: genshin_impact_paimon.glb  minecraft_creeper.glb  minecraft_torch.glb  strong_chicken.glb
src/: blocks.rs  control.rs  entities.rs  gamemap.rs  init_game.rs  interaction.rs  main.rs  player.rs  render.rs  ui.rs
src/ui/: chooseworld.rs  ingame.rs  mainmenu.rs  mod.rs  pause.rs  setting.rs
