[package]
name = "rust_mc"
version = "0.2.0"
edition = "2021"
authors = ["xhzgenius", "mystictides"]
description = "北京大学《Rust程序设计》课程作业。Powered by Bevy engine. "
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.1"
# bevy = { version = "0.10.1", features = ["dynamic_linking"] } 
serde = { version = "1.0.164", default-features = false, features = ["derive", "std", "rc"] }
serde_json = "1.0.99"
serde_with = "3.0.0"
walkdir = "2.3.3"
# NOTE: Remember to revert this before releasing your game! 
# Otherwise you will need to include libbevy_dylib alongside your game if you want it to run. 
# If you remove the "dynamic" feature, your game executable can run standalone.

rand = "*"
rand_distr = "*"
noise ="*"
chrono = "*"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
